# line_based_plane_segment

./: CMakeLists.txt  README.md  package.xml
config/: QQVGA.yaml
examples/: omps_segment_images.cpp  omps_segment_rgbd.cpp  organized_multi_plane_segmentor.cpp  organized_multi_plane_segmentor.h  plane_segment.cpp  plane_segment.h  plane_segment_images.cpp  plane_segment_rgbd.cpp  plane_viewer.cpp  plane_viewer.h
include/: line_based_plane_segmentation.h  line_extraction.h
src/: line_based_plane_segmentation.cpp  line_extraction.cpp
